--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,22 @@
-/*body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-*/
-
 body {
-  background-color: white;
+  /*background-color: black;*/
+  color: white;
+  font-family:sans-serif;/*font-family:'Franklin Gothic Medium';*/
+
+  background-color: #000000;
+opacity: 1;
+background-image:  linear-gradient(135deg, #16161a 25%, transparent 25%), linear-gradient(225deg, #16161a 25%, transparent 25%), linear-gradient(45deg, #16161a 25%, transparent 25%), linear-gradient(315deg, #16161a 25%, #000000 25%);
+background-position:  4px 0, 4px 0, 0 0, 0 0;
+background-size: 8px 8px;
+background-repeat: repeat;
+
+  
+}
+
+pattern {
+  background-color: #000000;
+  opacity: 1;
+  background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #000000 7px ), repeating-linear-gradient( #12121655, #121216 );
 }
 
 a {
@@ -16,4 +27,22 @@ a {
   margin-top: 20px;
   padding: 0;
   list-style: none;
+}
+
+.invis {
+  visibility: hidden;
+}
+
+/* margin - outside container, padding - within container*/
+.content {
+  margin: auto;
+  margin-top:25px;
+  background-color: black;
+  border-color: white;
+  border-style: solid;
+  border-radius: 5px;
+  border-width:thin;
+  padding:30px;
+  padding-top: 40px;
+  padding-bottom: 300px;
 }
