stuff I did 3 months ago

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-  h1 Hi, I'm Nathan
+  h1 Hi, I'm #
   br
   h5 Welcome to #{title}. Here you can find stuff about me
   br
@@ -14,6 +14,8 @@ block content
     li 
       a(href="/blogs") Blogs 
       placeholder for some blogs that I write
+    
+    //- linked in + github
 
 
 
