--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,7 +29,7 @@ html(lang='en')
             a(class="nav-link", class=(name === "projects" ? "active" : undefined), href="/projects") Projects
             li(class="nav-item")
               a(class="nav-link", class=(name === "blog" ? "active" : undefined), href="/blog") Blog
-            li(class="nav-item")
+            //-li(class="nav-item")
               a(class="nav-link", class=(name === "about" ? "active" : undefined), href="/about") About
             li(class="nav-item")
               a(class="nav-link", class=(name === "contact" ? "active" : undefined),  href="/contact") Contact
