--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,8 +21,37 @@ pattern {
 
 a {
   color: #00B7FF;
+  padding-bottom: 10px;
+  font-size:larger;
 }
 
+input {
+  background-color: #000000;
+  color: white;
+}
+
+input p {
+  margin: 0;
+  padding: 0;
+}
+
+textarea {
+  background-color: #000000;
+  color: white;
+}
+
+p a {
+  font-size: 16px;
+}
+
+pre {
+  color:aquamarine;
+  border-color: white;
+  border-style: solid;
+  border-radius: 1px;
+  border-width:thin;
+  padding: 10px;
+}
 .sidebar-nav {
   margin-top: 20px;
   padding: 0;
@@ -36,7 +65,8 @@ a {
 /* margin - outside container, padding - within container*/
 .content {
   margin: auto;
-  margin-top:25px;
+  margin-top:20px;
+  margin-bottom:60px;
   background-color: black;
   border-color: white;
   border-style: solid;
@@ -44,5 +74,37 @@ a {
   border-width:thin;
   padding:30px;
   padding-top: 40px;
-  padding-bottom: 300px;
+  padding-bottom: 50px;
+}
+
+.projects {
+  margin-top:20px;
+}
+
+.projects h3 {
+  font-weight: bold;
+}
+
+.projects a {
+  color:white;
+  text-decoration:none;
+}
+
+.project {
+  border-color: white;
+  border-style: solid;
+  border-width:thin;
+  padding:20px;
+}
+
+li {
+  padding-bottom:7px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 90%;
+  width: 90%;
 }
