--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,13 @@ extends layout
 
 block content
 
-  h1 Hi, I'm #
+  h1 Hi, I'm Nathan
   br
-  h5 Welcome to #{title}. Here you can find stuff about me
+  h5 Welcome to #{title}. Here you can find stuff about me.
+  br
+  h5 I am currently studying Software Engineering at UNSW. I am particularly interested in Security and AI. 
+  br
+  h5 I also play the video game League of Legends and my main champion is Yuumi
   br
   h5 Check out:
   ul 
@@ -14,11 +18,13 @@ block content
     li 
       a(href="/blogs") Blogs 
       placeholder for some blogs that I write
-    
-    //- linked in + github
-
-
-
+    li 
+      a(href="/contact") Contact
+      placeholder  to get in touch
+  br
+  br
+  p my_website v1.0
+  //-h5 gg
 
 
   //- h1 Dynamic content
