--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,8 +19,8 @@ html(lang='en')
         a(class="navbar-brand" href="/") my_website
         button(class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
           span(class="navbar-toggler-icon")
-        //- everything in this div collapses into a button when width is resized too small
-        div(class="collapse navbar-collapse" id="navbarSupportedContent")
+        //- everything in this div collapses into a button when width is resized too small. //style moves links down as they were not aligned with my_website text
+        div(class="collapse navbar-collapse" id="navbarSupportedContent" style='margin-top:7px')
           ul(class="navbar-nav me-auto mb-2 mb-lg-0")
             li(class="nav-item")
               //- nav-link active and aria-current="page" - current page
@@ -52,5 +52,19 @@ html(lang='en')
             input(class="form-control mr-1" type="search" placeholder="Search" aria-label="Search")
             button(class="btn btn-outline-success" type="submit") Search
 
+    //- content here
     div(class='col-sm-10 content')
       block content
+
+    //-footer ©
+    <footer class="bg-transparent sticky-bottom mt-3">
+    <div class="container">
+    <div class="row">
+      <div class="col"></div>
+      <div class="col-10 text-center footer-elements">
+        <p class="text-muted"> my_website v1.0 2021</a> </p>
+      </div>
+      <div class="col"></div>
+    </div>
+    </div>
+  </footer>
