--- a/views/blog.pug
+++ b/views/blog.pug
@@ -2,5 +2,12 @@ extends layout
 
 block content
 
-  //-h1 #{title}
-  H1 Welcome to my #{title}
+    //-h1 #{title}
+    H1 Welcome to my #{title}
+    
+    //-div(class="container projects")
+    //-a(href="/blog/html_cheatsheet" disabled='disabled')
+      div(class="project")
+        h3 HTML Cheatsheet
+        p A cheatsheet about all tags available in HTML5! 
+
