--- a/views/contact.pug
+++ b/views/contact.pug
@@ -17,7 +17,7 @@ block content
             placeholder  - check out my LinkedIn profile
     br
     //- contact form
-    div(class='widget ContactForm' data-version='2' id='ContactForm1')
+    //-div(class='widget ContactForm' data-version='2' id='ContactForm1')
         h4(class='title') Alternatively use this contact form to send me a message
         <div class='contact-form-widget'>
             <div class='form'>
@@ -45,6 +45,5 @@ block content
                 </form>
             </div>
         </div>
-    </div>
 
   
