--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
   br
   h5 I am currently studying Software Engineering at UNSW. I am particularly interested in Security and AI. 
   br
-  h5 I also play the video game League of Legends and my main champion is Yuumi
+  //-h5 I also play the video game League of Legends and my main champion is Yuumi
   br
   h5 Check out:
   ul 
@@ -16,14 +16,14 @@ block content
       a(href="/projects") Projects 
       placeholder for my projects
     li 
-      a(href="/blogs") Blogs 
+      a(href="/blog") Blogs 
       placeholder for some blogs that I write
     li 
       a(href="/contact") Contact
       placeholder  to get in touch
   br
   br
-  p my_website v1.0
+  p This is my_website v1.0. For the features to be included for version 2.0 see the #[a(href="/projects/my_website") project page]
   //-h5 gg
 
 
