--- a/views/projects.pug
+++ b/views/projects.pug
@@ -10,7 +10,7 @@ block content
       div(class="project")
         h3 my_website 
         p my_website is my personal website. It is created using Express.js, a Node.js web application framework. Each view is written in Pug using CSS. Pug is a template engine used to generate html 
-    a(href="/" disabled="disabled")
+    //-a(href="/" disabled="disabled")
       div(class="project")
         h5 my_website 
         p this is description of this 
