--- a/views/contact.pug
+++ b/views/contact.pug
@@ -15,6 +15,9 @@ block content
         li 
             a(href="https://www.linkedin.com/in/nathan-driscoll-8720b4165/" target="_blank" rel="noopener noreferrer") LinkedIn
             placeholder  - check out my LinkedIn profile
+        li 
+            a(href="https://www.youtube.com/channel/UC2KsfhWkceFz89uIlVQxWXA/" target="_blank" rel="noopener noreferrer") Youtube
+            placeholder  - check out my Youtube account
     br
     //- contact form
     //-div(class='widget ContactForm' data-version='2' id='ContactForm1')
