--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,8 @@
 doctype html
 html(lang='en')
   head
-    title= title
+    //- block head
+    title= title 
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     //- import bootstrap
@@ -62,7 +63,7 @@ html(lang='en')
     <div class="row">
       <div class="col"></div>
       <div class="col-10 text-center footer-elements">
-        <p class="text-muted"> my_website v1.0 2021</a> </p>
+        <p class="text-muted"> my_website v1.1 2022</a> </p>
       </div>
       <div class="col"></div>
     </div>
