--- a/views/index.pug
+++ b/views/index.pug
@@ -39,7 +39,7 @@ block content
   
   h5 The changelog for v1.1 can be found in the readme of this project's #[a(href="https://github.com/nathand99/my_website/") repo].
   br
-  p This is my_website v1.1. For the features to be included for version 2.0 see the #[a(href="/projects/my_website") project page]. 
+  h5 This is my_website v1.1. For the features to be included for version 2.0 see the #[a(href="/projects/my_website") project page]. 
 
 
   //- h1 Dynamic content
