added youtube channel

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -17,7 +17,7 @@ block content
             placeholder  - check out my LinkedIn profile
         li 
             a(href="https://www.youtube.com/channel/UC2KsfhWkceFz89uIlVQxWXA/" target="_blank" rel="noopener noreferrer") Youtube
-            placeholder  - check out my Youtube account
+            placeholder  - check out my Youtube channel
     br
     //- contact form
     //-div(class='widget ContactForm' data-version='2' id='ContactForm1')
