--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,13 +3,20 @@ body {
   color: white;
   font-family:sans-serif;/*font-family:'Franklin Gothic Medium';*/
 
-  background-color: #000000;
+  /* background-color: #000000;
   opacity: 1;
   background-image:  linear-gradient(135deg, #16161a 25%, transparent 25%), linear-gradient(225deg, #16161a 25%, transparent 25%), linear-gradient(45deg, #16161a 25%, transparent 25%), linear-gradient(315deg, #16161a 25%, #000000 25%);
   background-position:  4px 0, 4px 0, 0 0, 0 0;
   background-size: 8px 8px;
-  background-repeat: repeat;
+  background-repeat: repeat; */
 
+  background-color: #000000;
+  opacity: 1;
+  background-image:  radial-gradient(#3e3e3e 1.1px, transparent 1.1px), radial-gradient(#3e3e3e 1.1px, #000000 1.1px);
+  background-size: 44px 44px;
+  background-position: 0 0,22px 22px;
+
+  /* https://www.magicpattern.design/tools/css-backgrounds */
   
   /* line-height: 170%; */
 }
@@ -31,6 +38,8 @@ pattern {
   background-color: #000000;
   opacity: 1;
   background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #000000 7px ), repeating-linear-gradient( #12121655, #121216 );
+  background-color: #000000;
+  
 }
 
 a {
@@ -88,13 +97,14 @@ code {
 
 /* margin - outside container, padding - within container*/
 .content {
+  width: 1100px;
   margin: auto;
   margin-top:20px;
   margin-bottom:60px;
   background-color: black;
   border-color: white;
   border-style: solid;
-  border-radius: 5px;
+  border-radius: 2px;
   border-width:thin;
   padding:30px;
   padding-top: 40px;
