--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html(lang='en')
   head
     //- block head
     title= title 
+    link(rel="icon" type="image/x-icon" href="/images/nd.png")
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     //- import bootstrap
